--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<header>
 			<div class="logo">
-				<img src="/img/logoipsum-logo-11 1.png" alt="">
+				<img src="/logoipsum-logo-11 1.png" alt="">
 			</div>
 		</header>
 		<main>
@@ -23,9 +23,9 @@
 					quae quos ipsam dolore vero vel, veniam provident molestias cupiditate pariatur. Eaque aspernatur
 					voluptates repudiandae ex, ipsum debitis pariatur impedit eum?</p>
 				<section class="category">
-					<img src="/img/Frame 4648952.png" alt="">
-					<img src="/img/Frame 4648953.png" alt="">
-					<img src="/img/Frame 4648954.png" alt="">
+					<img src="/Frame 4648952.png" alt="">
+					<img src="/Frame 4648953.png" alt="">
+					<img src="/Frame 4648954.png" alt="">
 				</section>
 			</div>
 			<section class="game">
@@ -48,17 +48,17 @@
 							voluptates repudiandae ex, ipsum debitis pariatur impedit eum?</p>
 						<div class="plays-img">
 							<figure>
-								<img src="/img/1.png" alt="">
+								<img src="/1.png" alt="">
 								<div class="overlay">$123456</div>
 								<figcaption>Lorem</figcaption>
 							</figure>
 							<figure>
-								<img src="/img/2.png" alt="">
+								<img src="/2.png" alt="">
 								<div class="overlay">$123456</div>
 								<figcaption>Lorem</figcaption>
 							</figure>
 							<figure>
-								<img src="/img/3.png" alt="">
+								<img src="/3.png" alt="">
 								<div class="overlay">$123456</div>
 								<figcaption>Lorem</figcaption>
 							</figure>
@@ -72,7 +72,7 @@
 		<footer>
 			<div class="app">
 				<div class="left">
-					<img src="/img/Frame 4648918.png" alt="">
+					<img src="/Frame 4648918.png" alt="">
 					<h3>Lorem ipsum dolor sit amet.</h3>
 					<p>Lorem ipsum dolor, sit amet consectetur adipisicing <a href="">elit.</a> Optio, quis.</p>
 				</div>
@@ -82,7 +82,7 @@
 			</div>
 			<div class="bot">
 				<div class="left">
-					<img src="/img/shutterstock_2014325807 [Converted] 1.png" alt="">
+					<img src="/shutterstock_2014325807 [Converted] 1.png" alt="">
 					<h3>Lorem ipsum dolor <a href="">sit amet.</a> </h3>
 				</div>
 				<div class="right">
